--- a/index.Rmd
+++ b/index.Rmd
@@ -46,6 +46,6 @@ write.csv(df, "./Sales/data/testData.csv", row.names = FALSE)
 
 
 ## Project Resources  
-* [The repository containing the code for the Shiny app can be found on my GitHub.]()  
-* [The Shiny app can be found here.]()  
+* [The repository containing the code for the Shiny app can be found on my GitHub.](https://github.com/PhiPrime/firstShinyApp)  
+* [The Shiny app can be found here.](https://phiprime.shinyapps.io/Sales/)  
 
